formatting cleanup - remove readtime for product page - partner page product spacing fix - rename projects to shop

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -99,7 +99,7 @@ h1,h2,h3,h4 {
 
     .each-item {
         max-width: 200px;
-
+        padding: 10px;
     }
 }
 
